# nba_pbp_dashboard

./: .env.example  README.md  airflow.cfg  main.tf  nba_dashboard_streamlit.py  pyproject.toml  variables.tf  visualize.py
config/: airflow.cfg
dags/: create_bigquery_external_table_dag.py  move_pbp_data_into_gcs_bucket_dag.py
nba_pbp_dashboard_dbt/: dbt_profiles.yml  dbt_project.yml
nba_pbp_dashboard_dbt/models/marts/: dim_player_data.sql  fct_3pt_data.sql  fct_blocks_data.sql  fct_final_score.sql  fct_midrange_data.sql  fct_records_by_year.sql  fct_rim_shooting_data.sql  fct_steals_data.sql  fct_turnover_data.sql  schema.yml
nba_pbp_dashboard_dbt/models/staging/: schema.yml  (+2 more)
nba_pbp_dashboard_dbt/tests/: assert_score_change_is_0_for_blocks.sql  assert_score_change_is_0_for_steals.sql  assert_score_change_is_0_for_turnovers.sql  assert_score_change_is_2_or_0_for_midrange_shots.sql  assert_score_change_is_2_or_0_for_rim_shots.sql  assert_score_change_is_3_or_0_for_3pt_shots.sql  asserts_home_score_diff_plus_away_score_diff_zero.sql  asserts_no_games_have_a_missing_home_or_away_team.sql  asserts_score_diff_is_absolute_value_of_home_away.sql  asserts_teams_during_covid_season_20_played_72_games.sql  asserts_teams_during_covid_season_win_loss_adds_to_72_games.sql  asserts_teams_in_current_season_have_not_played_more_than_82_games.sql  asserts_teams_in_current_season_win_loss_does_not_add_to_more_than_82_games.sql  asserts_teams_in_historical_non_shortened_seasons_play_82_games.sql  asserts_teams_in_historical_non_shortened_seasons_win_loss_adds_to_82_games.sql
(+7 files in other folders)
